db/kupido-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: kupido-db
  name: kupido-db
  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kupido-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kupido-db
    spec:
      containers:
      - image: postgres:15
        name: postgres
        resources: {}
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: dbvolume
      volumes:
      - name: dbvolume
        persistentVolumeClaim:
          claimName: kupido-db-pvc1
status: {}
