db/kupido-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kupido-db
  namespace: db
spec:
  selector:
    app: kupido-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
